bindings/ruby/ext/blazen/blazen.h


#define BLAZEN_BACKEND_HINT_MISTRALRS 0
#define BLAZEN_BACKEND_HINT_CANDLE 1
#define BLAZEN_BACKEND_HINT_LLAMACPP 2
#define BLAZEN_BACKEND_HINT_NONE -1
#define BLAZEN_SCHEDULER_CONSTANT 0
#define BLAZEN_SCHEDULER_LINEAR 1
#define BLAZEN_SCHEDULER_COSINE 2
#define BLAZEN_MIXED_PRECISION_NONE 0
#define BLAZEN_MIXED_PRECISION_BF16 1
typedef struct BlazenAdapterHandleInfo BlazenAdapterHandleInfo;
typedef struct BlazenAdapterStatus BlazenAdapterStatus;
typedef struct BlazenAdapterStatusList BlazenAdapterStatusList;
typedef struct BlazenError BlazenError;
typedef struct BlazenEvent BlazenEvent;
typedef struct BlazenFuture BlazenFuture;
typedef struct BlazenModelManager BlazenModelManager;
typedef struct BlazenModelStatus BlazenModelStatus;
typedef struct BlazenModelStatusList BlazenModelStatusList;
typedef struct BlazenPoolStatus BlazenPoolStatus;
typedef struct BlazenPoolStatusList BlazenPoolStatusList;
typedef struct BlazenStepOutput BlazenStepOutput;
typedef struct BlazenWorkflow BlazenWorkflow;
typedef struct BlazenWorkflowBuilder BlazenWorkflowBuilder;
typedef struct BlazenWorkflowHistoryEntry BlazenWorkflowHistoryEntry;
typedef struct BlazenWorkflowResult BlazenWorkflowResult;
typedef struct {
    int32_t backend_hint;
    const char *revision;
    const char *hf_token;
    const char *cache_dir;
    const char *device;
    const char *gguf_file;
    uint64_t memory_estimate_bytes;
    const char *pool;
} BlazenHfLoadOptions;
typedef struct {
    uint32_t rank;
    float alpha;
    float dropout;
    const char *const *target_modules;
    uintptr_t target_modules_len;
} BlazenLoraConfig;
typedef struct {
    void *user_data;
    void (*drop_user_data)(void *user_data);
    int32_t (*invoke)(void *user_data,
                      BlazenEvent *event,
                      BlazenStepOutput **out_output,
                      BlazenError **out_err);
} BlazenStepHandlerVTable;
 int32_t blazen_future_take_bool(BlazenFuture *fut, bool *out, BlazenError **err);
int32_t blazen_future_take_model_status_list(BlazenFuture *fut,
                                             BlazenModelStatusList **out,
                                             BlazenError **err);
int32_t blazen_future_take_adapter_handle_info(BlazenFuture *fut,
                                               BlazenAdapterHandleInfo **out,
                                               BlazenError **err);
int32_t blazen_future_take_adapter_status_list(BlazenFuture *fut,
                                               BlazenAdapterStatusList **out,
                                               BlazenError **err);
 BlazenModelManager *blazen_model_manager_new(void);
 BlazenModelManager *blazen_model_manager_with_budgets_gb(double cpu_ram_gb, double gpu_vram_gb);
 void blazen_model_manager_free(BlazenModelManager *mgr);
int32_t blazen_model_manager_load_blocking(const BlazenModelManager *mgr,
                                           const char *model_id,
                                           BlazenError **out_err);
 BlazenFuture *blazen_model_manager_load(const BlazenModelManager *mgr, const char *model_id);
int32_t blazen_model_manager_unload_blocking(const BlazenModelManager *mgr,
                                             const char *model_id,
                                             BlazenError **out_err);
 BlazenFuture *blazen_model_manager_unload(const BlazenModelManager *mgr, const char *model_id);
int32_t blazen_model_manager_is_loaded_blocking(const BlazenModelManager *mgr,
                                                const char *model_id,
                                                BlazenError **out_err);
 BlazenFuture *blazen_model_manager_is_loaded(const BlazenModelManager *mgr, const char *model_id);
BlazenModelStatusList *blazen_model_manager_status_blocking(const BlazenModelManager *mgr,
                                                            BlazenError **out_err);
 BlazenFuture *blazen_model_manager_status(const BlazenModelManager *mgr);
 BlazenPoolStatusList *blazen_model_manager_pools(const BlazenModelManager *mgr);
BlazenAdapterHandleInfo *blazen_model_manager_load_adapter_blocking(const BlazenModelManager *mgr,
                                                                    const char *model_id,
                                                                    const char *adapter_dir,
                                                                    const char *adapter_id,
                                                                    double scale,
                                                                    BlazenError **out_err);
BlazenFuture *blazen_model_manager_load_adapter(const BlazenModelManager *mgr,
                                                const char *model_id,
                                                const char *adapter_dir,
                                                const char *adapter_id,
                                                double scale);
int32_t blazen_model_manager_unload_adapter_blocking(const BlazenModelManager *mgr,
                                                     const char *model_id,
                                                     const char *adapter_id,
                                                     BlazenError **out_err);
BlazenFuture *blazen_model_manager_unload_adapter(const BlazenModelManager *mgr,
                                                  const char *model_id,
                                                  const char *adapter_id);
BlazenAdapterStatusList *blazen_model_manager_list_adapters_blocking(const BlazenModelManager *mgr,
                                                                     const char *model_id,
                                                                     BlazenError **out_err);
BlazenFuture *blazen_model_manager_list_adapters(const BlazenModelManager *mgr,
                                                 const char *model_id);
int32_t blazen_model_manager_load_from_hf_blocking(const BlazenModelManager *mgr,
                                                   const char *id,
                                                   const char *repo,
                                                   const BlazenHfLoadOptions *options,
                                                   char **out_chosen_backend,
                                                   BlazenError **out_err);
BlazenFuture *blazen_model_manager_load_from_hf(const BlazenModelManager *mgr,
                                                const char *id,
                                                const char *repo,
                                                const BlazenHfLoadOptions *options);
 char *blazen_adapter_status_adapter_id(const BlazenAdapterStatus *s);
 char *blazen_adapter_status_source_dir(const BlazenAdapterStatus *s);
 double blazen_adapter_status_scale(const BlazenAdapterStatus *s);
 uint64_t blazen_adapter_status_memory_bytes(const BlazenAdapterStatus *s);
 uint32_t blazen_adapter_status_mount_strategy(const BlazenAdapterStatus *s);
 void blazen_adapter_status_free(BlazenAdapterStatus *s);
 uintptr_t blazen_adapter_status_list_len(const BlazenAdapterStatusList *list);
const BlazenAdapterStatus *blazen_adapter_status_list_get(const BlazenAdapterStatusList *list,
                                                          uintptr_t idx);
 BlazenAdapterStatus *blazen_adapter_status_list_take(BlazenAdapterStatusList *list, uintptr_t idx);
 void blazen_adapter_status_list_free(BlazenAdapterStatusList *list);
 char *blazen_model_status_id(const BlazenModelStatus *s);
 bool blazen_model_status_loaded(const BlazenModelStatus *s);
 uint64_t blazen_model_status_memory_bytes(const BlazenModelStatus *s);
 char *blazen_model_status_pool(const BlazenModelStatus *s);
 uintptr_t blazen_model_status_adapters_count(const BlazenModelStatus *s);
 BlazenAdapterStatusList *blazen_model_status_adapters(const BlazenModelStatus *s);
 void blazen_model_status_free(BlazenModelStatus *s);
 uintptr_t blazen_model_status_list_len(const BlazenModelStatusList *list);
const BlazenModelStatus *blazen_model_status_list_get(const BlazenModelStatusList *list,
                                                      uintptr_t idx);
 BlazenModelStatus *blazen_model_status_list_take(BlazenModelStatusList *list, uintptr_t idx);
 void blazen_model_status_list_free(BlazenModelStatusList *list);
 char *blazen_pool_status_id(const BlazenPoolStatus *s);
 uint64_t blazen_pool_status_budget_bytes(const BlazenPoolStatus *s);
 uint64_t blazen_pool_status_used_bytes(const BlazenPoolStatus *s);
 uintptr_t blazen_pool_status_loaded_models(const BlazenPoolStatus *s);
 void blazen_pool_status_free(BlazenPoolStatus *s);
 uintptr_t blazen_pool_status_list_len(const BlazenPoolStatusList *list);
const BlazenPoolStatus *blazen_pool_status_list_get(const BlazenPoolStatusList *list,
                                                    uintptr_t idx);
 BlazenPoolStatus *blazen_pool_status_list_take(BlazenPoolStatusList *list, uintptr_t idx);
 void blazen_pool_status_list_free(BlazenPoolStatusList *list);
 char *blazen_adapter_handle_info_adapter_id(const BlazenAdapterHandleInfo *h);
 uint64_t blazen_adapter_handle_info_memory_bytes(const BlazenAdapterHandleInfo *h);
 uint32_t blazen_adapter_handle_info_mount_strategy(const BlazenAdapterHandleInfo *h);
 void blazen_adapter_handle_info_free(BlazenAdapterHandleInfo *h);
int32_t blazen_workflow_builder_add_step(BlazenWorkflowBuilder *builder,
                                         const char *name,
                                         const char *const *accepts,
                                         uintptr_t accepts_count,
                                         const char *const *emits,
                                         uintptr_t emits_count,
                                         BlazenStepHandlerVTable vtable,
                                         BlazenError **out_err);
int32_t blazen_parse_workflow_history(const char *history_json,
                                      BlazenWorkflowHistoryEntry ***out_array,
                                      uintptr_t *out_count,
                                      BlazenError **out_err);
 void blazen_workflow_history_entry_array_free(BlazenWorkflowHistoryEntry **arr, uintptr_t count);
 char *blazen_workflow_history_entry_workflow_id(const BlazenWorkflowHistoryEntry *entry);
 char *blazen_workflow_history_entry_step_name(const BlazenWorkflowHistoryEntry *entry);
 char *blazen_workflow_history_entry_event_type(const BlazenWorkflowHistoryEntry *entry);
 char *blazen_workflow_history_entry_event_data_json(const BlazenWorkflowHistoryEntry *entry);
 uint64_t blazen_workflow_history_entry_timestamp_ms(const BlazenWorkflowHistoryEntry *entry);
 int64_t blazen_workflow_history_entry_duration_ms(const BlazenWorkflowHistoryEntry *entry);
 char *blazen_workflow_history_entry_error(const BlazenWorkflowHistoryEntry *entry);
 void blazen_workflow_history_entry_free(BlazenWorkflowHistoryEntry *entry);
 BlazenWorkflowBuilder *blazen_workflow_builder_new(const char *name);
int32_t blazen_workflow_builder_step_timeout_ms(BlazenWorkflowBuilder *builder,
                                                uint64_t millis,
                                                BlazenError **out_err);
int32_t blazen_workflow_builder_timeout_ms(BlazenWorkflowBuilder *builder,
                                           uint64_t millis,
                                           BlazenError **out_err);
int32_t blazen_workflow_builder_build(BlazenWorkflowBuilder *builder,
                                      BlazenWorkflow **out_workflow,
                                      BlazenError **out_err);
 void blazen_workflow_builder_free(BlazenWorkflowBuilder *builder);
int32_t blazen_workflow_run_blocking(const BlazenWorkflow *wf,
                                     const char *input_json,
                                     BlazenWorkflowResult **out_result,
                                     BlazenError **out_err);
 BlazenFuture *blazen_workflow_run(const BlazenWorkflow *wf, const char *input_json);
 uintptr_t blazen_workflow_step_names_count(const BlazenWorkflow *wf);
 char *blazen_workflow_step_names_get(const BlazenWorkflow *wf, uintptr_t idx);
 void blazen_workflow_free(BlazenWorkflow *wf);
 BlazenEvent *blazen_event_new(const char *event_type, const char *data_json);
 char *blazen_event_event_type(const BlazenEvent *event);
 char *blazen_event_data_json(const BlazenEvent *event);
 void blazen_event_free(BlazenEvent *event);
 BlazenEvent *blazen_workflow_result_event(const BlazenWorkflowResult *result);
 uint64_t blazen_workflow_result_total_input_tokens(const BlazenWorkflowResult *result);
 uint64_t blazen_workflow_result_total_output_tokens(const BlazenWorkflowResult *result);
 double blazen_workflow_result_total_cost_usd(const BlazenWorkflowResult *result);
 void blazen_workflow_result_free(BlazenWorkflowResult *result);
 BlazenStepOutput *blazen_step_output_new_none(void);
 BlazenStepOutput *blazen_step_output_new_single(BlazenEvent *event);
 BlazenStepOutput *blazen_step_output_new_multiple(void);
 uint32_t blazen_step_output_multiple_push(BlazenStepOutput *output, BlazenEvent *event);
 uint32_t blazen_step_output_kind(const BlazenStepOutput *output);
 BlazenEvent *blazen_step_output_single_event(const BlazenStepOutput *output);
 uintptr_t blazen_step_output_multiple_count(const BlazenStepOutput *output);
 BlazenEvent *blazen_step_output_multiple_get(const BlazenStepOutput *output, uintptr_t idx);
 void blazen_step_output_free(BlazenStepOutput *output);