bindings/ruby/lib/blazen/ffi.rb


    attach_function :blazen_parse_workflow_history,
                    [:pointer, :pointer, :pointer, :pointer], :int32
    attach_function :blazen_workflow_history_entry_array_free,
                    [:pointer, :size_t], :void
    attach_function :blazen_workflow_history_entry_workflow_id,
                    [:pointer], :pointer
    attach_function :blazen_workflow_history_entry_step_name,
                    [:pointer], :pointer
    attach_function :blazen_workflow_history_entry_event_type,
                    [:pointer], :pointer
    attach_function :blazen_workflow_history_entry_event_data_json,
                    [:pointer], :pointer
    attach_function :blazen_workflow_history_entry_timestamp_ms,
                    [:pointer], :uint64
    attach_function :blazen_workflow_history_entry_duration_ms,
                    [:pointer], :int64
    attach_function :blazen_workflow_history_entry_error,
                    [:pointer], :pointer
    attach_function :blazen_workflow_history_entry_free,
                    [:pointer], :void

    # -------------------------------------------------------------------
    # Workflow — Builder / Workflow / WorkflowResult / Event / StepOutput
    # -------------------------------------------------------------------
    attach_function :blazen_workflow_builder_new, [:pointer], :pointer
    attach_function :blazen_workflow_builder_add_step,
                    [:pointer, :pointer, :pointer, :size_t,
                     :pointer, :size_t,
                     BlazenStepHandlerVTable.by_value, :pointer],
                    :int32
    attach_function :blazen_workflow_builder_step_timeout_ms,
                    [:pointer, :uint64, :pointer], :int32
    attach_function :blazen_workflow_builder_timeout_ms,
                    [:pointer, :uint64, :pointer], :int32
    attach_function :blazen_workflow_builder_build,
                    [:pointer, :pointer, :pointer], :int32
    attach_function :blazen_workflow_builder_free, [:pointer], :void

    attach_function :blazen_workflow_run_blocking,
                    [:pointer, :pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_workflow_run,
                    [:pointer, :pointer], :pointer
    attach_function :blazen_workflow_step_names_count, [:pointer], :size_t
    attach_function :blazen_workflow_step_names_get,
                    [:pointer, :size_t], :pointer
    attach_function :blazen_workflow_free, [:pointer], :void

    attach_function :blazen_event_new,        [:pointer, :pointer], :pointer
    attach_function :blazen_event_event_type, [:pointer], :pointer
    attach_function :blazen_event_data_json,  [:pointer], :pointer
    attach_function :blazen_event_free,       [:pointer], :void

    attach_function :blazen_workflow_result_event,                [:pointer], :pointer
    attach_function :blazen_workflow_result_total_input_tokens,   [:pointer], :uint64
    attach_function :blazen_workflow_result_total_output_tokens,  [:pointer], :uint64
    attach_function :blazen_workflow_result_total_cost_usd,       [:pointer], :double
    attach_function :blazen_workflow_result_free,                 [:pointer], :void

    attach_function :blazen_step_output_new_none,      [],          :pointer
    attach_function :blazen_step_output_new_single,    [:pointer],  :pointer
    attach_function :blazen_step_output_new_multiple,  [],          :pointer
    attach_function :blazen_step_output_multiple_push, [:pointer, :pointer], :uint32
    attach_function :blazen_step_output_kind,          [:pointer],  :uint32
    attach_function :blazen_step_output_single_event,  [:pointer],  :pointer
    attach_function :blazen_step_output_multiple_count, [:pointer], :size_t
    attach_function :blazen_step_output_multiple_get,
                    [:pointer, :size_t], :pointer
    attach_function :blazen_step_output_free, [:pointer], :void

    # -------------------------------------------------------------------
    # ModelManager — typed future-take entry points (mirror cabi/future.rs)
    # -------------------------------------------------------------------
    attach_function :blazen_future_take_bool,
                    [:pointer, :pointer, :pointer], :int32
    attach_function :blazen_future_take_model_status_list,
                    [:pointer, :pointer, :pointer], :int32
    attach_function :blazen_future_take_adapter_handle_info,
                    [:pointer, :pointer, :pointer], :int32
    attach_function :blazen_future_take_adapter_status_list,
                    [:pointer, :pointer, :pointer], :int32

    # -------------------------------------------------------------------
    # ModelManager — manager construction / verbs (cabi/manager.rs)
    # -------------------------------------------------------------------
    attach_function :blazen_model_manager_new,             [], :pointer
    attach_function :blazen_model_manager_with_budgets_gb, [:double, :double], :pointer
    attach_function :blazen_model_manager_free,            [:pointer], :void

    attach_function :blazen_model_manager_load_blocking,
                    [:pointer, :pointer, :pointer], :int32, blocking: true
    attach_function :blazen_model_manager_load,
                    [:pointer, :pointer], :pointer

    attach_function :blazen_model_manager_unload_blocking,
                    [:pointer, :pointer, :pointer], :int32, blocking: true
    attach_function :blazen_model_manager_unload,
                    [:pointer, :pointer], :pointer

    attach_function :blazen_model_manager_is_loaded_blocking,
                    [:pointer, :pointer, :pointer], :int32, blocking: true
    attach_function :blazen_model_manager_is_loaded,
                    [:pointer, :pointer], :pointer

    attach_function :blazen_model_manager_status_blocking,
                    [:pointer, :pointer], :pointer, blocking: true
    attach_function :blazen_model_manager_status,
                    [:pointer], :pointer

    attach_function :blazen_model_manager_pools,
                    [:pointer], :pointer

    attach_function :blazen_model_manager_load_adapter_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :double, :pointer],
                    :pointer, blocking: true
    attach_function :blazen_model_manager_load_adapter,
                    [:pointer, :pointer, :pointer, :pointer, :double], :pointer

    attach_function :blazen_model_manager_unload_adapter_blocking,
                    [:pointer, :pointer, :pointer, :pointer], :int32, blocking: true
    attach_function :blazen_model_manager_unload_adapter,
                    [:pointer, :pointer, :pointer], :pointer

    attach_function :blazen_model_manager_list_adapters_blocking,
                    [:pointer, :pointer, :pointer], :pointer, blocking: true
    attach_function :blazen_model_manager_list_adapters,
                    [:pointer, :pointer], :pointer

    BLAZEN_BACKEND_HINT_MISTRALRS = 0
    BLAZEN_BACKEND_HINT_CANDLE    = 1
    BLAZEN_BACKEND_HINT_LLAMACPP  = 2
    BLAZEN_BACKEND_HINT_NONE      = -1

    # Mirror of `BlazenHfLoadOptions` in blazen.h (cabi/manager.rs). All
    # pointer fields are nullable; `memory_estimate_bytes == 0` means unset.
    class BlazenHfLoadOptions < ::FFI::Struct
      layout :backend_hint,           :int32,
             :revision,               :pointer,
             :hf_token,               :pointer,
             :cache_dir,              :pointer,
             :device,                 :pointer,
             :gguf_file,              :pointer,
             :memory_estimate_bytes,  :uint64,
             :pool,                   :pointer
    end

    attach_function :blazen_model_manager_load_from_hf_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer],
                    :int32, blocking: true
    attach_function :blazen_model_manager_load_from_hf,
                    [:pointer, :pointer, :pointer, :pointer], :pointer

    # -------------------------------------------------------------------
    # ModelManager — record accessors (cabi/manager_records.rs)
    # -------------------------------------------------------------------
    attach_function :blazen_adapter_status_adapter_id,     [:pointer], :pointer
    attach_function :blazen_adapter_status_source_dir,     [:pointer], :pointer
    attach_function :blazen_adapter_status_scale,          [:pointer], :double
    attach_function :blazen_adapter_status_memory_bytes,   [:pointer], :uint64
    attach_function :blazen_adapter_status_mount_strategy, [:pointer], :uint32
    attach_function :blazen_adapter_status_free,           [:pointer], :void

    attach_function :blazen_adapter_status_list_len,  [:pointer], :size_t
    attach_function :blazen_adapter_status_list_get,  [:pointer, :size_t], :pointer
    attach_function :blazen_adapter_status_list_take, [:pointer, :size_t], :pointer
    attach_function :blazen_adapter_status_list_free, [:pointer], :void

    attach_function :blazen_model_status_id,              [:pointer], :pointer
    attach_function :blazen_model_status_loaded,          [:pointer], :bool
    attach_function :blazen_model_status_memory_bytes,    [:pointer], :uint64
    attach_function :blazen_model_status_pool,            [:pointer], :pointer
    attach_function :blazen_model_status_adapters_count,  [:pointer], :size_t
    attach_function :blazen_model_status_adapters,        [:pointer], :pointer
    attach_function :blazen_model_status_free,            [:pointer], :void

    attach_function :blazen_model_status_list_len,  [:pointer], :size_t
    attach_function :blazen_model_status_list_get,  [:pointer, :size_t], :pointer
    attach_function :blazen_model_status_list_take, [:pointer, :size_t], :pointer
    attach_function :blazen_model_status_list_free, [:pointer], :void

    attach_function :blazen_pool_status_id,             [:pointer], :pointer
    attach_function :blazen_pool_status_budget_bytes,   [:pointer], :uint64
    attach_function :blazen_pool_status_used_bytes,     [:pointer], :uint64
    attach_function :blazen_pool_status_loaded_models,  [:pointer], :size_t
    attach_function :blazen_pool_status_free,           [:pointer], :void

    attach_function :blazen_pool_status_list_len,  [:pointer], :size_t
    attach_function :blazen_pool_status_list_get,  [:pointer, :size_t], :pointer
    attach_function :blazen_pool_status_list_take, [:pointer, :size_t], :pointer
    attach_function :blazen_pool_status_list_free, [:pointer], :void

    attach_function :blazen_adapter_handle_info_adapter_id,     [:pointer], :pointer
    attach_function :blazen_adapter_handle_info_memory_bytes,   [:pointer], :uint64
    attach_function :blazen_adapter_handle_info_mount_strategy, [:pointer], :uint32
    attach_function :blazen_adapter_handle_info_free,           [:pointer], :void

    ADAPTER_MOUNT_STRATEGY_ATTACHED = 1
    ADAPTER_MOUNT_STRATEGY_REBUILT  = 2
    ADAPTER_MOUNT_STRATEGY_MERGED   = 3

    # -------------------------------------------------------------------
    # ModelManager — LoRA training (cabi/manager.rs + training_records.rs)
    # -------------------------------------------------------------------

    BLAZEN_SCHEDULER_CONSTANT = 0
    BLAZEN_SCHEDULER_LINEAR   = 1
    BLAZEN_SCHEDULER_COSINE   = 2

    BLAZEN_MIXED_PRECISION_NONE = 0
    BLAZEN_MIXED_PRECISION_BF16 = 1

    # Mirror of `BlazenLoraConfig` in blazen.h.
    class BlazenLoraConfig < ::FFI::Struct
      layout :rank,               :uint32,
             :alpha,              :float,
             :dropout,            :float,
             :target_modules,     :pointer,
             :target_modules_len, :size_t
    end
